Refactor: Use UserAuthenticationService and fix method implementation [#43]